--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,21 +1,34 @@
 version: 2.1
 
-orbs:
-  gcp-cli: circleci/gcp-cli@3.0.1
-  
 executors:
   docker-publisher:
-    machine:
-        image: ubuntu-2004:202010-01
-jobs:
-    build:
-      executor: docker-publisher
-      steps:
-        - checkout  
-        - run:
-            name: List all files 
-            command: ls 
+    docker:
+      - image: cimg/base:2022.06
 
+jobs:
+  build:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
+      - run:
+          name: List all files 
+          command: ls -al
+
+      - run:
+          name: Docker Hub login  
+          command: echo ${PASSWORD} | docker login -u ${USERNAME} --password-stdin
+
+      - run:
+          name: Build and tag Docker image  
+          command: |
+           cd dolibarr
+           docker build -t ${USERNAME}/dolibarr.dev:latest .
+      - run:
+          name: Push the image  
+          command: docker push ${USERNAME}/dolibarr.dev:latest
 workflows:
   dolibarr:
     jobs:
@@ -23,4 +36,4 @@ workflows:
           filters:
              branches:
                 only:
-                   - development
+                   - master
