--- a/k8s/dolibarr/dolibarr-deployment.yaml
+++ b/k8s/dolibarr/dolibarr-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           image: busybox:1.36
           command: ["sh", "-c", "sleep 30"]
       containers:
-        - image: samsam4/dolibarr:latest
+        - image: uccef/dolibarr.dev:latest
           name: dolibarr
           ports:
             - containerPort: 80
