change url to localhost

--- a/k8s/dolibarr/dolibarr-conf-pvc.yaml
+++ b/k8s/dolibarr/dolibarr-conf-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: dolibarr-conf
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 2Gi
+      storage: 5Gi
