--- a/k8s/dolibarr/dolibarr-docs-pvc.yaml
+++ b/k8s/dolibarr/dolibarr-docs-pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dolibarr-docs
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 2Gi
+      storage: 5Gi
