change owner to www-data

--- a/k8s/dolibarr/dolibarr-deployment.yaml
+++ b/k8s/dolibarr/dolibarr-deployment.yaml
@@ -34,7 +34,7 @@ spec:
           imagePullPolicy: Always
           resources: {}
           volumeMounts:
-            - mountPath: /var/www/html/htdocs/conf/
+            - mountPath: /var/www/html/
               name: dolibarr-conf
             - mountPath: /var/www/documents
               name: dolibarr-docs
